homework-3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserverhomework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserverhomework
  template:
    metadata:
      labels:
        app: httpserverhomework
    spec:
      containers:
        - name: httpserverhomework
          image: -t thurstonzk2008/httpserverhomework:v1.0
          imagePullPolicy: Always
          args:
            - "-address"
            - ":8080"
            - "-logtostderr"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpserverhomework
spec:
  type: NodePort
  ports:
    - name: http
      targetPort: 8080
      port: 8080
      nodePort: 31533
  selector:
    app: gohttpserver
